--- a/index.html
+++ b/index.html
@@ -1,27 +1,1 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport"
-        content="width=device-width,initial-scale=1,user-scalable=no,maximum-scale=1,minimum-scale=1,viewport-fit=cover" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Cache-control" content="no-cache" />
-    <meta http-equiv="Cache" content="no-cache" />
-    <meta http-equiv="window-target" content="_top" />
-    <meta name="format-detection" content="telephone=no" />
-    <title>React App 移动端模板</title>
-    <script defer="defer" src="/react-template-mobile/js/commons.64b25c83.js"></script>
-    <script defer="defer" src="/react-template-mobile/js/app.f9cd8bdc.js"></script>
-    <link as="script" href="/react-template-mobile/js/home-two.d33b9426.js" rel="preload">
-    <link as="script" href="/react-template-mobile/js/home.7f9d60fe.js" rel="preload">
-    <link href="/react-template-mobile/js/about.5192d2e4.js" rel="prefetch">
-    <link href="/react-template-mobile/js/dashboard.3b28430d.js" rel="prefetch">
-</head>
-
-<body>
-    <div id="root"></div>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,maximum-scale=1,minimum-scale=1,viewport-fit=cover"/><meta http-equiv="Pragma" content="no-cache"/><meta http-equiv="Cache-control" content="no-cache"/><meta http-equiv="Cache" content="no-cache"/><meta http-equiv="window-target" content="_top"/><meta name="format-detection" content="telephone=no"/><title>React App 移动端模板</title><script defer="defer" src="/react-template-mobile/js/commons.ed10a3c7.js"></script><script defer="defer" src="/react-template-mobile/js/app.b225661c.js"></script><link href="/react-template-mobile/css/app.f0e8516f.css" rel="stylesheet"><link as="style" href="/react-template-mobile/css/home-two.7c76825d.chunk.css" rel="preload"><link as="style" href="/react-template-mobile/css/home.386cb13d.chunk.css" rel="preload"><link as="script" href="/react-template-mobile/js/home-two.0b807a89.js" rel="preload"><link as="script" href="/react-template-mobile/js/home.2ab98368.js" rel="preload"><link href="/react-template-mobile/css/about.c3123020.chunk.css" rel="prefetch"><link href="/react-template-mobile/css/dashboard.e3a77acf.chunk.css" rel="prefetch"><link href="/react-template-mobile/js/about.a146eac8.js" rel="prefetch"><link href="/react-template-mobile/js/dashboard.942f7400.js" rel="prefetch"></head><body><div id="root"></div></body></html>
